NAS4Free 11.1.0.4 - Atomics
---------------------------
Changes:
- Upgrade to FreeBSD 11.1-RELEASE-P1.
- Update translations.
- Add option to make USB devices available in virtualbox-ose.
- Add webgui code improvements.
- Add Swap mode option for zroot.
- Add CPU microcode update feature option.
- Upgrade e2fsprogs to 1.43.5.
- Upgrade phpvirtualbox to 5.1.1.
- Upgrade lcdproc to 0.5.9.
- Upgrade nano to 2.8.7.
- Upgrade proftpd to 1.3.6.
- Upgrade e2fsprogs to 1.43.6.
- Upgrade sudo to 1.8.21p2.
- Upgrade rrdtool to 1.7.0.
- Upgrade samba to 4.6.8.
- Upgrade php to 7.1.10.
- Upgrade tmux to 2.6.
- Upgrade syncthing to 0.14.39.
- Upgrade virtualbox-ose to 5.1.30.

Fixes:
- fix snmp, hrPrinterTable: printcap entry for <noname?> has errors.

Permanent restrictions:
- It is not possible to format a SoftRAID disk with MSDOS FAT16/32.
- It is not possible to encrypt a disk partition, only complete disks are supported.
- AFP shares with TimeMachine support are limited to max. 4 shares.

Known bugs:
- If DHCP for IPv4 is used, the IPv6 statically configured DNS server will be
  overriden by the IPv4 DNS server.

NEED TESTING:
- IPv6: auto mode.
- All services using IPv6 address. (NFS, FTP, etc...)
- Netatalk VFS Samba module (automatically enabled when Netatalk starts) crashes
  samba when accessing to share.
- Need to write an online-test procedure.

Help needed:
- Need help for adding LDAP authentication feature:
  Main services can be easily authenticated using PAM-LDAP, but is harder for Samba.
